# risk-management

./: pyproject.toml
chatbot/: db.sqlite3
chatbot/API/: urls.py  views.py
chatbot/API/templates/API/: index.html
chatbot/chatbot/: settings.py  urls.py
